Completed Simon page, including hints.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link type="text/css" rel="stylesheet" href="css/normalize.css">
       <link type="text/css" rel="stylesheet" href="css/layout.css">
       <link type="text/css" rel="stylesheet" href="css/style.css">
-      <link type="text/css" rel="stylesheet" href="css/style.css">
+      <link type="text/css" rel="stylesheet" href="css/animate.css">
       <link type='text/css' rel='stylesheet' href='http://fonts.googleapis.com/css?family=Montserrat:400,700'>
   </head>
   <body>
