--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link type="text/css" rel="stylesheet" href="css/layout.css">
       <link type="text/css" rel="stylesheet" href="css/style.css">
       <link type="text/css" rel="stylesheet" href="css/animate.css">
-      <link type='text/css' rel='stylesheet' href='http://fonts.googleapis.com/css?family=Montserrat:400,700'>
+      <link type='text/css' rel='stylesheet' href='http://fonts.googleapis.com/css?family=Inconsolata|Montserrat:400,700'>
   </head>
   <body>
     <main ng-view></main>
@@ -16,3 +16,6 @@
     <script src="js/app.js"></script>
   </body>
 </html>
+
+
+
